# AlphaX-Card-Terminal

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
alphax_card_terminal/: api.py  hooks.py  modules.txt  patches.txt
alphax_card_terminal/alphax_card_terminal/doctype/alphax_bank_app_config/: alphax_bank_app_config.json  alphax_bank_app_config.py
alphax_card_terminal/alphax_card_terminal/doctype/alphax_card_transaction/: alphax_card_transaction.json  alphax_card_transaction.py
alphax_card_terminal/alphax_card_terminal/doctype/alphax_mqtt_settings/: alphax_mqtt_settings.json  alphax_mqtt_settings.py
alphax_card_terminal/alphax_card_terminal/doctype/alphax_payment_terminal_settings/: alphax_payment_terminal_settings.json  alphax_payment_terminal_settings.py
alphax_card_terminal/docs/: USER_MANUAL.md
alphax_card_terminal/doctype/alphax_payment_terminal_settings/: alphax_payment_terminal_settings.json
alphax_card_terminal/drivers/: base.py  registry.py
alphax_card_terminal/drivers/impl/: android_mada_mqtt.py  generic_rest.py  local_bridge.py  mqtt_async.py  network_tcp.py  simulator.py  stripe_terminal_sdk.py
alphax_card_terminal/events/: sales_invoice_before_submit.py  sales_invoice_on_submit.py
alphax_card_terminal/fixtures/: alphax_bank_app_config.json  alphax_terminal_brand.json  alphax_terminal_driver.json  custom_field.json  print_format.json
alphax_card_terminal/public/css/: alphax_card_terminal.css
alphax_card_terminal/public/js/: alphax_card_terminal.js
scripts/: validate_no_conflicts.py
(+10 files in other folders)
