[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphax_card_terminal"
dynamic = ["version"]
description = "Card terminal metadata capture framework (MoP-driven) for ERPNext/Frappe."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AlphaX", email = "support@alphax.com"}]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "alphax_card_terminal.__version__"}
